--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,12 @@
 sonar.sourceEncoding=UTF-8
 sonar.java.source=17
 
+# Only analyze the autoconfigure module (parent and starter have no source code)
+sonar.sources=izanami-spring-boot-autoconfigure/src/main/java
+sonar.tests=izanami-spring-boot-autoconfigure/src/test/java
+sonar.java.binaries=izanami-spring-boot-autoconfigure/target/classes
+sonar.java.test.binaries=izanami-spring-boot-autoconfigure/target/test-classes
+
 # JaCoCo XML report produced during `mvn verify`
 sonar.coverage.jacoco.xmlReportPaths=izanami-spring-boot-autoconfigure/target/site/jacoco/jacoco.xml
 
